[tool.poetry]
name = "env-run"
version = "0.2.0"
description = ""
authors = ["Simon Brulhart <simon@brulhart.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
erun = 'env_run:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
