[tool.poetry]
name = "env-run"
version = "0.3.0"
description = ""
authors = ["Simon Brulhart <simon@brulhart.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
black = {version = "^21.8b0", allow-prereleases = true}

[tool.poetry.scripts]
erun = 'env_run:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
