[tool.poetry]
name = "env-run"
version = "0.5.1"
description = ""
authors = ["Simon Brulhart <simon@brulhart.me>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipdb = "^0.13.9"

[tool.poetry.scripts]
erun = 'env_run:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
